# error-forge

./: .gitignore  API.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: API-FREEZE-AUDIT.md  API.md  COMPARISON.md  STABILITY.md  architecture.md  migration.md
error-forge-derive/: Cargo.toml
error-forge-derive/src/: lib.rs
examples/: async_example.rs  basic.rs  derive_example.rs
src/: async_error.rs  async_error_impl.rs  collector.rs  console_theme.rs  context.rs  error.rs  group_macro.rs  lib.rs  logging.rs  macros.rs  registry.rs
src/recovery/: backoff.rs  circuit_breaker.rs  forge_extensions.rs  mod.rs  retry.rs
tests/: async_test.rs  basic_test.rs  collector_test.rs  context_test.rs  derive_macro_test.rs  display.rs  integration_test.rs  logging_test.rs  macro_test.rs  recovery_test.rs  registry_test.rs  thread_safety_test.rs
