[package]
name = "error-forge-derive"
version = "1.0.0"
edition = "2021"
rust-version = "1.81"
description = "Derive macros for the error-forge crate"
license = "Apache-2.0"
documentation = "https://docs.rs/error-forge"
repository = "https://github.com/jamesgober/error-forge"
homepage = "https://github.com/jamesgober/error-forge"
authors = [
    "James Gober <me@jamesgober.com>"
]

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
